@@ -71,10 +71,16 @@ module ActionView
       # Formats a +number+ with a +delimiter+.
       # Example:
       #    number_with_delimiter(12345678) => 12,345,678
-      def number_with_delimiter(number, delimiter=",")
-        number.to_s.gsub(/(\d)(?=(\d\d\d)+(?!\d))/, "\\1#{delimiter}")
+      def number_with_delimiter(number, delimiter=",", separator=".")
+        begin
+          parts = number.to_s.split(separator)
+          parts[0].gsub!(/(\d)(?=(\d\d\d)+(?!\d))/, "\\1#{delimiter}")
+          parts.join separator
+        rescue
+          number
+        end
       end
-
+      
       # Returns a formatted-for-humans file size.
       # 
       # Examples:
